--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,10 @@ hr {
   letter-spacing: 1.5px;
 }
 
+.super {
+  font-size: 36px;
+}
+
 .intro {
   color: white;
   margin: 50px;
@@ -71,7 +75,12 @@ td.category {
   color: #FFE082;
 }
 
-a {
+a.big {
+  text-decoration: none;
+  color: #FFCA28;
+}
+
+a.normal {
   text-decoration: none;
   font-style: italic;
   color: #FFCA28;
